--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cup Time - время кофе и чая</title>
+
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
   <header class="header">
-    <div class="container">
-      <a class="headre__logo-link">
+    <div class="container header__container">
+      <a class="header__logo-link">
         <img src="image/logo.svg" alt="Логотип Cup Time" class="header__logo">
       </a>
 
